--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,11 +7,11 @@
     <ul class="menu vertical medium-horizontal expanded medium-text-center" data-responsive-menu="drilldown medium-dropdown">
     <li><a href="{{ site.url }}">Home</a>
     </li>
-    <li><a href="blog{{ site.blog }}">Blog</a>
+    <li><a href="../blog{{ site.blog }}">Blog</a>
     </li>
-    <li><a href="research{{ site.research }}">Research</a>
+    <li><a href="../../research{{ site.research }}">Research</a>
     </li>
-    <li><a href="officers{{ site.officers }}">Officers</a>
+    <li><a href="../../officers{{ site.officers }}">Officers</a>
     </li>
     </ul>
     </div>
