--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
       <hr>
       <center>
       © {{ site.time | date: '%Y' }} {{ site.author }}.
-      <a href="https://twitter.com/{{ site.twitter }}">Follow me on Twitter</a></center>
+      <a href="https://twitter.com/{{ site.twitter }}">Follow us on TwitterI</a></center>
 
       <!-- add icons here -->
     </div>
