--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,30 @@
 <header>
-    <div class="title-bar" data-responsive-toggle="main-menu" data-hide-for="medium">
+    <!-- <div class="title-bar" data-responsive-toggle="main-menu" data-hide-for="medium">
     <button class="menu-icon" type="button" data-toggle></button>
     <div class="title-bar-title">Menu</div>
-    </div>
-    <div class="top-bar" id="main-menu">
+    </div> -->
+
+    <div class="navbar-fixed">
+        <nav>
+          <div class="nav-wrapper" id="navbar">
+            <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+            <!-- <a href="http://dailybruin.com/" class="left"> -->
+              <img id="logo" src="assets/bsa_logo.png" />
+            <!-- </a> -->
+            <a href="{{ site.url }}" class="left navlink">
+              Bruin Sports Analytics
+            </a>
+            <ul id="days" class="right hide-on-med-and-down">
+              <li id="Blog"><a class="navlink" href="../blog{{ site.blog }}">Blog</a></li>
+              <li id="Research"><a class="navlink" href="../../research{{ site.research }}">Research</a></li>
+              <li id="Officers"><a class="navlink" href="../../officers{{ site.officers }}">Officers</a></li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+
+
+    <!-- <div class="top-bar" id="main-menu">
     <ul class="menu vertical medium-horizontal expanded medium-text-center" data-responsive-menu="drilldown medium-dropdown">
     <li><a href="{{ site.url }}">Home</a>
     </li>
@@ -14,5 +35,5 @@
     <li><a href="../../officers{{ site.officers }}">Officers</a>
     </li>
     </ul>
-    </div>
+    </div> -->
 </header>
