--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,38 @@
 ---
-layout: default
 ---
 
-<h2>{{ page.title }}</h2>
-<p>{{ page.date | date_to_string }}</p>
-{{ content }}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>{{ site.name }}</title>
+    <!-- <link rel="stylesheet" href="/css/base.css" type="text/css">     -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">    
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto+Slab"> 
+    <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">    
+    <link rel="stylesheet" href="/css/posts.css" type="text/css"> 
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    
+  </head>
+  {% include header.html %}
+  <body>
+    <div id="bodycontent">
+
+            <h2 id = "pagetitle">{{ page.title }}</h2>
+            <p>By: {{page.author}} | {{ page.date | date_to_string }}</p>
+            {{ content }}
+
+      <hr>
+    </div>
+      <center id="footer">
+      © {{ site.time | date: '%Y' }} {{ site.author }}.
+      <a href="https://twitter.com/{{ site.twitter }}">Follow us on Twitter!</a></center>
+
+      <!-- add icons here -->
+  </body>
+  <script>
+      $(document).ready(function(){
+    $('.materialboxed').materialbox();
+  });
+  </script>
+</html>
