--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,19 @@
---- 
----
+
+html {
+  height: 100;
+}
+body {
+  height: 100%;
+}
+
 
 /* ============================================================
   SECTIONS
 ============================================================ */
+section.module {
+  height: 100%;
+}
+
 section.module:last-child {
   margin-bottom: 0;
 }
@@ -24,7 +34,8 @@ section.module.content {
   padding: 40px;
 }
 section.module.parallax {
-  height: 600px;
+  height: 100vh;
+  position: relative;
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -34,16 +45,18 @@ section.module.parallax {
   background-size: cover;
 }
 section.module.parallax h1 {
-  color: rgba(255, 255, 255, 0.8);
-  font-size: 48px;
-  line-height: 600px;
-  font-weight: 700;
+  color: rgb(255, 255, 255);
+  /* line-height: 600px; */
+  padding-top: 10%;
+  padding-bottom: 10%;
+  font-weight: 500;
   text-align: center;
   text-transform: uppercase;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 section.module.parallax-1 {
-  background-image: url("../assets/1.jpg");
+  height: 100%;
+  background-image: url("../assets/pauleybanner.jpg");
 }
 #abtdescription {
   font-family: "Roboto Slab", serif;
@@ -85,4 +98,24 @@ footer {
   section.module.parallax h1 {
     font-size: 160px;
   }
+}
+
+/* ============
+CARDS
+============ */
+
+.card {
+  /* Add shadows to create the "card" effect */
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+/* Add some padding inside the card container */
+.container {
+  padding: 2px 16px;
 }
