--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
   <head>
     <title>{{ site.name }}</title>
     <!-- <link rel="stylesheet" href="/css/base.css" type="text/css">     -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">    
+    <link rel="stylesheet" href="/css/materialize.min.css">    
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto+Slab"> 
     <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">    
     <link rel="stylesheet" href="/css/style.css" type="text/css"> 
