--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
         <nav>
           <div class="nav-wrapper" id="navbar">
             <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-              <img id="logo" src="assets/bsa_logo.png" />
+              <!-- <img id="logo" src="assets/bsa_logo.png" /> -->
             <!-- </a> -->
             <a href="{{ site.url }}" class="left navlink">
               Bruin Sports Analytics
