refix menu redirect

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
             <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
               <!-- <img id="logo" src="assets/bsa_logo.png" /> -->
             <!-- </a> -->
-            <a href="{{ ../../site.url }}" class="left navlink">
+            <a href="bruinsportsanalytics.com" class="left navlink">
               Bruin Sports Analytics
             </a>
             <ul id="days" class="right hide-on-med-and-down">
