--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto+Slab"> 
     <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">    
     <link rel="stylesheet" href="/css/style.css" type="text/css"> 
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
@@ -27,13 +28,5 @@
 
       <!-- add icons here -->
     </div>
-    <script>
-      $(document).ready(function(){
-      // the "href" attribute of the modal trigger must specify the modal ID that wants to be triggered
-      $('.modal').modal();
-      $(".button-collapse").sideNav();
-    });
-            
-  </script>
   </body>
 </html>
