--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,9 +4,8 @@
     <div class="title-bar-title">Menu</div>
     </div> -->
 
-    <div class="navbar-fixed">
         <nav>
-          <div class="nav-wrapper" id="navbar">
+          <div class="nav-wrapper">
             <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
               <!-- <img id="logo" src="assets/bsa_logo.png" /> -->
             <!-- </a> -->
@@ -26,7 +25,6 @@
             </ul>
           </div>
         </nav>
-      </div>
 
 
     <!-- <div class="top-bar" id="main-menu">
@@ -42,3 +40,12 @@
     </ul>
     </div> -->
 </header>
+
+<script>
+  $(document).ready(function(){
+  // the "href" attribute of the modal trigger must specify the modal ID that wants to be triggered
+  $('.modal').modal();
+  $(".button-collapse").sideNav();
+});
+        
+</script>
