--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto+Slab"> 
     <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">    
     <link rel="stylesheet" href="/css/posts.css" type="text/css"> 
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
     
