--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,15 +3,18 @@
     <button class="menu-icon" type="button" data-toggle></button>
     <div class="title-bar-title">Menu</div>
     </div> -->
-
+      <div class="navbar-fixed">
         <nav>
           <div class="nav-wrapper">
             <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-              <!-- <img id="logo" src="assets/bsa_logo.png" /> -->
-            <!-- </a> -->
+            <div class="leftbox">
             <a href="http://www.bruinsportsanalytics.com" class="left navlink">
+              <img id="logo" src="../../assets/logo1.png" /> 
+              <span id="homemenuitem">
               Bruin Sports Analytics
+            </span>
             </a>
+          </div>
             <ul id="days" class="right hide-on-med-and-down">
               <li id="Blog"><a class="navlink" href="../blog{{ site.blog }}">Blog</a></li>
               <li id="Research"><a class="navlink" href="../../research{{ site.research }}">Research</a></li>
@@ -25,6 +28,7 @@
             </ul>
           </div>
         </nav>
+      </div>
 
 
     <!-- <div class="top-bar" id="main-menu">
