--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,8 @@
 
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+
+    <meta name="viewport" content="width=device-width" />
   </head>
   {% include header.html %}
   <body>
