--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
             </a>
           </div>
             <ul id="days" class="right hide-on-med-and-down">
-              <li id="Blog"><a class="navlink" href="../blog{{ site.blog }}">Blog</a></li>
+              <li id="Blog"><a class="navlink" href="../../blog{{ site.blog }}">Blog</a></li>
               <li id="Research"><a class="navlink" href="../../research{{ site.research }}">Research</a></li>
               <li id="Officers"><a class="navlink" href="../../officers{{ site.officers }}">Officers</a></li>
             </ul>
