--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,13 +18,13 @@
             <ul id="days" class="right hide-on-med-and-down">
               <li id="Blog"><a class="navlink" href="../../blog{{ site.blog }}">Blog</a></li>
               <li id="Research"><a class="navlink" href="../../research{{ site.research }}">Research</a></li>
-              <li id="Officers"><a class="navlink" href="../../officers{{ site.officers }}">Officers</a></li>
+              <li id="Officers"><a class="navlink" href="../../officers{{ site.officers }}">Officers/Members</a></li>
             </ul>
 
             <ul class="side-nav" id="mobile-demo">
               <li id="Blog"><a class="navlink" href="../blog{{ site.blog }}">Blog</a></li>
               <li id="Research"><a class="navlink" href="../../research{{ site.research }}">Research</a></li>
-              <li id="Officers"><a class="navlink" href="../../officers{{ site.officers }}">Officers</a></li>
+              <li id="Officers"><a class="navlink" href="../../officers{{ site.officers }}">Officers/Members</a></li>
             </ul>
           </div>
         </nav>
