--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,11 +6,11 @@
   <head>
     <title>{{ site.name }}</title>
     <!-- <link rel="stylesheet" href="/css/base.css" type="text/css">     -->
-    <link rel="stylesheet" href="/css/materialize.min.css">    
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto+Slab"> 
-    <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">    
-    <link rel="stylesheet" href="/css/posts.css" type="text/css"> 
-    <link rel="stylesheet" href="/css/style.css" type="text/css"> 
+    <link rel="stylesheet" href="/css/materialize.min.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto+Slab">
+    <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
+    <link rel="stylesheet" href="/css/posts.css" type="text/css">
+    <link rel="stylesheet" href="/css/style.css" type="text/css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
@@ -18,8 +18,9 @@
 
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" href="../../assets/logo1.png">
-    
+
   </head>
+  {% include author.html %}
   {% include header.html %}
   <body>
     <div id="bodycontent">
