finished author links

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,9 +27,30 @@
     <div id="bodycontent">
 
             <h2 id = "pagetitle">{{ page.title }}</h2>
-            {% if author %}
+            <p>{% assign authorCount = page.authors | size %}
+                  {% if authorCount == 0 %}
+                    No author
+                  {% elsif authorCount == 1 %}
+                    {{ page.authors | first }}
+                  {% else %}
+                    {% for author in page.authors %}
+                      {% assign person = site.data.authors[author] %}
+                      {% if forloop.first %}
+                       By: <a href="{{person.web}}">{{ person.name }}</a>
+                      {% elsif forloop.last %}
+                      and <a href="{{person.web}}">{{ person.name }}</a>
+                      {% else %}
+                    , <a href="{{person.web}}">{{ person.name }}</a>
+                      {% endif %}
+                    {% endfor %}
+                  {% endif %}
+                | {{ page.date | date_to_string }}</p>
+            <!--
+            {% if authors %}
             <p>By: <a href="{{author.web}}">{{author.name}}</a> | {{ page.date | date_to_string }}</p>
             {% endif %}
+          -->
+
             {{ content }}
 
       <hr>
