--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,12 +19,14 @@
               <li id="Blog"><a class="navlink" href="../../blog{{ site.blog }}">Blog</a></li>
               <li id="Research"><a class="navlink" href="../../research{{ site.research }}">Research</a></li>
               <li id="Officers"><a class="navlink" href="../../officers{{ site.officers }}">Officers/Members</a></li>
+              <li id="About"><a class="navlink" href="../../about{{ site.about }}">About Us</a></li>
             </ul>
 
             <ul class="side-nav" id="mobile-demo">
               <li id="Blog"><a class="navlink" href="../blog{{ site.blog }}">Blog</a></li>
               <li id="Research"><a class="navlink" href="../../research{{ site.research }}">Research</a></li>
               <li id="Officers"><a class="navlink" href="../../officers{{ site.officers }}">Officers/Members</a></li>
+              <li id="About"><a class="navlink" href="../../about{{ site.about }}">About Us</a></li>
             </ul>
           </div>
         </nav>
