--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,7 @@
     </div> -->
       <div class="navbar-fixed">
         <nav>
+        
           <div class="nav-wrapper">
             <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
             <div class="leftbox">
@@ -14,7 +15,7 @@
               Bruin Sports Analytics
             </span>
             </a>
-          </div>
+            </div>
             <ul id="days" class="right hide-on-med-and-down">
               <li id="Research"><a class="navlink" href="../../research{{ site.research }}">Research</a></li>
               <li id="Officers"><a class="navlink" href="../../officers{{ site.officers }}">Officers/Members</a></li>
@@ -22,6 +23,7 @@
             </ul>
 
             <ul class="side-nav" id="mobile-demo">
+              <li id="Home"><a class="navlink" href="http://www.bruinsportsanalytics.com">Home</a></li>
               <li id="Research"><a class="navlink" href="../../research{{ site.research }}">Research</a></li>
               <li id="Officers"><a class="navlink" href="../../officers{{ site.officers }}">Officers/Members</a></li>
               <li id="About"><a class="navlink" href="../../about{{ site.about }}">About Us</a></li>
@@ -37,6 +39,5 @@
   // the "href" attribute of the modal trigger must specify the modal ID that wants to be triggered
   $('.modal').modal();
   $(".button-collapse").sideNav();
-});
-        
+});     
 </script>
