--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,17 @@
 
       <hr>
       <center>
+      <div class="newsletter-container">
+            <form action="https://getsimpleform.com/messages?form_api_token=cdd07db5b90f967b9271a5c7ef3fd573" method="post">
+              <ul>
+                <input type="email" placeholder="Email:" id="email" style="font-family: Roboto Slab, serif;"/>
+                <input type="submit" value="Subscribe" id="newsletter-submit" style="font-family: Roboto Slab, serif;" />
+
+              </ul>
+            </form>
+          </div>
+        </center>
+      <center>
       © {{ site.time | date: '%Y' }} {{ site.author }}.
       <a href="https://twitter.com/{{ site.twitter }}">Follow us on TwitterI</a></center>
 
