fix email list via mailchimp

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -60,6 +60,7 @@
 
       <hr>
     </div>
+      {% include subscription-form.html %}
       <center id="footer">
       © {{ site.time | date: '%Y' }} {{ site.author }}.
       <a href="https://twitter.com/{{ site.twitter }}">Follow us on Twitter!</a></center>
