blog and speakers

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,7 @@
+
+
+
 <header>
-    <!-- <div class="title-bar" data-responsive-toggle="main-menu" data-hide-for="medium">
-    <button class="menu-icon" type="button" data-toggle></button>
-    <div class="title-bar-title">Menu</div>
-    </div> -->
-    
       <div class="navbar-fixed">
         <nav>
           <div class="nav-wrapper">
@@ -16,26 +14,78 @@
             </span>
             </a>
             </div>
+
             <ul id="days" class="right hide-on-med-and-down">
-              <li id="Research"><a class="navlink" href="../../research{{ site.research }}" style="font-family: Roboto slab, serif;">Research</a></li>
-              <li id="Officers"><a class="navlink" href="../../officers{{ site.officers }}" style="font-family: Roboto slab, serif;">Officers</a></li>
+              <li id="Blog"><a class="navlink" href="../../blog{{ site.blog }}" 
+                style="font-family: Roboto slab, serif;">Blog</a></li>
+              <li id="Research"><a class="navlink" href="../../research{{ site.research }}" 
+                style="font-family: Roboto slab, serif;">Research</a></li>
+              <li id="Officers"><a class="navlink" href="../../officers{{ site.officers }}" 
+                style="font-family: Roboto slab, serif;">Officers</a></li>
               <li id="About"><a class="navlink" href="../../about{{ site.about }}" style="font-family: Roboto slab, serif;">About</a></li>
+              <li id="Speakers"><a class="navlink" href="../../speakers{{ site.speakers }}" style="font-family: Roboto slab, serif;">Speakers</a></li>
+
             </ul>
+          
 
             <ul class="side-nav" id="mobile-demo">
               <li id="Home"><a class="navlink" href="../../{{ site.index }}" style="font-family: Roboto slab, serif;">Home</a></li>
+              <li id="Blog"><a class="navlink" href="../../blog{{ site.blog }}" style="font-family: Roboto slab, serif;">Blog</a></li>
               <li id="Research"><a class="navlink" href="../../research{{ site.research }}" style="font-family: Roboto slab, serif;">Research</a></li>
               <li id="Officers"><a class="navlink" href="../../officers{{ site.officers }}" style="font-family: Roboto slab, serif;">Officers</a></li>
               <li id="About"><a class="navlink" href="../../about{{ site.about }}" style="font-family: Roboto slab, serif;">About</a></li>
+              <li id="Speakers"><a class="navlink" href="../../speakers{{ site.speakers }}" style="font-family: Roboto slab, serif;">Speakers</a></li>
             </ul>
           </div>
         </nav>
       </div>
-    
     <!--
+   <div class="navbar-fixed">
+        <nav>
+          <div class="container-fluid">
+          <div class="nav-wrapper">
+            <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+            <div class="leftbox">
+            <a href="../../{{ site.index }}" class="left navlink">
+              <img id="logo" src="../../assets/logo1.png" /> 
+              <span id="homemenuitem" style="font-family: Roboto slab, serif;">
+              Bruin Sports Analytics
+            </span>
+            </a>
+          </div>
+          <ul id="days" class="right hide-on-med-and-down">
+              <li id="Blog"><a class="navlink" href="../../blog{{ site.blog }}" style="font-family: 'Roboto Slab', serif;font-size: 15px;">Blog</a></li>
+              <li id="Research"><a class="navlink" href="../../research{{ site.research }}" style="font-family: 'Roboto Slab', serif;font-size: 15px;">Research</a></li>
+              <li class="dropdown">
+
+                <a class="dropdown-toggle" data-toggle="dropdown" href="../../about{{ site.about }}"
+                style="font-family: 'Roboto Slab', serif;font-size: 15px;">About
+                <span class="caret"></span>
+                </a>
+
+                <ul class="dropdown-menu">
+                  <li><a href="../../officers{{ site.officers }}" 
+                    style="font-family: 'Roboto Slab', serif;font-size: 15px;">
+                  Officers
+                </a></li>
+                  <li><a href="../../speakers{{ site.speakers }}"
+                    style="font-family: 'Roboto Slab', serif;font-size: 15px;">
+                  Speakers
+                </a></li>
+                </ul>
+              </li>
+                
+          </ul>
+      </div>
+    </div>
+    </nav>
+  -->
+    <!--
+    style="font-family: Roboto slab, serif;"
+    
     <nav id="navbar" class="collapse navbar-collapse">
       <div class="leftbox">
-            <a href="http://www.bruinsportsanalytics.com" class="left navlink">
+            <a href="../../{{ site.index }}" class="left navlink">
               <img id="logo" src="../../assets/logo1.png" /> 
               <span id="homemenuitem" style="font-family: Roboto slab, serif;">
               Bruin Sports Analytics
@@ -43,35 +93,35 @@
             </a>
         </div>
 
-        <ul class="right nav navbar-nav">
-            {% assign links = site.data.navigation %}
-            {% for link in links %}
-                {% assign class = nil %}
-                {% if page.url contains link.url %}
-                    {% assign class = 'active' %}
-                {% endif %}
-                {% if link.sublinks %}
-                    <li class="dropdown {{ class }}">
-                        <a href="{{ site.baseurl }}{{ link.url }}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" style="font-family: Roboto slab, serif;">{{ link.title }} <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            {% for sublink in link.sublinks %}
-                                {% if sublink.title == 'separator' %}
-                                    <li role="separator" class="divider"></li>
-                                {% else %}
-                                    <li>
-                                        <a href="{{ site.baseurl }}{{ sublink.url }}" style="color: #ffab40">{{ sublink.title }}</a>
-                                    </li>
-                                {% endif %}
-                            {% endfor %}
-                        </ul>
-                    </li>
-                {% else %}
-                    <li class="{{ class }}">
-                        <a href="{{ site.baseurl }}{{ link.url }}" style="font-family: Roboto slab, serif;">{{ link.title }}</a>
-                    </li>
-                {% endif %}
-            {% endfor %}
-        </ul>
+           <ul class="right nav navbar-nav">
+                {% assign links = site.data.navigation %}
+                {% for link in links %}
+                    {% assign class = nil %}
+                    {% if page.url contains link.url %}
+                        {% assign class = 'active' %}
+                    {% endif %}
+                    {% if link.sublinks %}
+                        <li class="dropdown {{ class }}">
+                            <a href="{{ site.baseurl }}{{ link.url }}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ link.title }} <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                {% for sublink in link.sublinks %}
+                                    {% if sublink.title == 'separator' %}
+                                        <li role="separator" class="divider"></li>
+                                    {% else %}
+                                        <li>
+                                            <a href="{{ site.baseurl }}{{ sublink.url }}">{{ sublink.title }}</a>
+                                        </li>
+                                    {% endif %}
+                                {% endfor %}
+                            </ul>
+                        </li>
+                    {% else %}
+                        <li class="{{ class }}">
+                            <a href="{{ site.baseurl }}{{ link.url }}">{{ link.title }}</a>
+                        </li>
+                    {% endif %}
+                {% endfor %}
+            </ul>
     </nav>
   -->
 
