--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
       {% include subscription-form.html %}
       <center>
       © {{ site.time | date: '%Y' }} {{ site.author }}.
-      <a href="https://twitter.com/{{ site.twitter }}">Follow us on TwitterI</a></center>
+      <a href="https://twitter.com/{{ site.twitter }}">Follow us on Twitter!</a></center>
 
       <!-- add icons here -->
     </div>
