add alexs article and fix icon

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" href="../../assets/logo1.png">
+    <link rel="icon" href="../assets/bsa_logo_short_1819.png">
 
   </head>
   
